--- a/release/test-with-fix.html
+++ b/release/test-with-fix.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script src="fixVizAscii.js"></script>
+	<script src="fixVizAscii.min.js"></script>
 	<script src="viz.js"></script>
 </head>
 <body>
