--- a/test-all.html
+++ b/test-all.html
@@ -51,31 +51,31 @@
 		</select>
 		&nbsp;| always: 
 		<input type="checkbox" id="always" checked>
+		&nbsp;| direction
+		<input type="checkbox" id="direction" checked>
 	</span>
 	&nbsp;<a id="url">(url)</a>&nbsp;
 	<span id="error"></span>
 	<!-- portrait -->
-	<!--
-	<table>
+	<table id="hori">
 		<tr>
 			<td><b>original<b></td>
 			<td><b>fixed<b></td>
 		</tr>
 		<tr>
-			<td id="original"></td>
-			<td id="final"></td>
+			<td id="hori_original"></td>
+			<td id="hori_final"></td>
 		</tr>
 	</table>
-	-->
 	<!-- landscape -->
-	<table>
+	<table id="vert">
 		<tr>
 			<td><b>original<b></td>
-			<td id="original"></td>
+			<td id="vert_original"></td>
 		</tr>
 		<tr>
 			<td><b>fixed<b></td>
-			<td id="final"></td>
+			<td id="vert_final"></td>
 		</tr>
 	</table>
 	<table id="dot">
